[package]
name = "cupsule"
version = "0.1.0"
authors = ["lucky <takuto.yoshikai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.3.2"
base64 = "0.12.0"
block-modes = "0.3.3"
bytebuffer = "0.2.1"
rand = "0.7.3"

